# VoucherAI

./: .gitignore  .pre-commit-config.yaml  R-1.png.json  R-1.png_1.json  README.md  TI-1.png.json  TI-1.png_2.json  app.py  app2.py  app_journal.py  app_receipt_wizard.py  app_upload.py  artist_rules.json  main.py  pyproject.toml  requirements.txt  results.pkl
config/: settings.py
data/extracted_json/: R-1.json  TI-1.json  TI-2.json
front/: api_settings.html  index.html
front/common/: apiClient.js  common.css  config.js  dummy.json  utils.js
front/common/dummydata/: dashboard_dummy_transaction.json  pjt_dummy.json
front/dashboard/: dashboard.css  dashboard.html  dashboard.js
front/settings/: settings.css  settings.html  settings.js  settings_api.js
front/workspace/: workspace.css  workspace.html  workspace.js
input/: 10월 분개장2_raw.xlsx  TI-1_extracted.json
src/ant/: categorize.py  constants.py  llm_main.py  load_llm.py  ocr_document.py  preprocessing.py  utils.py  visualization.py
src/api/: __init__.py  constants.py  db.py  log.py  main.py  upload.py  utils.py  workspace.py
src/entjournal/: __init__.py  constants.py  field_schema.json  journal_main.py  utils.py
src/entocr/: __init__.py  __main__.py  cli.py  extractor.py  jpg_converter.py  mllm_reader.py  models.py  ocr_main.py  ocr_service.py  pdf_converter.py
src/mapping/: __init__.py  constants.py
src/utils/: constants.py  util.py
test/: constants.py  test_main.py
workspace/0828TEST/: setting.json
workspace/0829/: setting.json
workspace/08291259am/: setting.json
workspace/09281130am/: setting.json
workspace/123/: setting.json
workspace/12345678/: setting.json
workspace/2506 HUNTRIX 헤메 정산/: setting.json
workspace/2506HUNTRIX_MAEKUP/: setting.json
workspace/2509 HUNTRIX 헤매 정산/: setting.json
workspace/HUNTRIX 0404/: setting.json
workspace/HUNTRIX 2506/: setting.json
workspace/HUNTRIX 2506 헤매/: setting.json
workspace/HUNTRIX 2506 헤매 정산/: setting.json
workspace/KPOP/: setting.json
workspace/KPOP2/: setting.json
workspace/TEST2508/: setting.json
workspace/TESTEST/: setting.json
workspace/abcdefg/: setting.json
workspace/asda/: setting.json
workspace/central_db/: config.json  journal_entry.json
workspace/entocr-2025/: setting.json
workspace/frontend/: setting.json
workspace/gg/: setting.json
workspace/huntrix/: setting.json
workspace/huntrix 000/: setting.json
workspace/huntrix 2507/: setting.json
workspace/huntrix 2508/: setting.json
workspace/ll/: setting.json
workspace/plz/: setting.json
workspace/qwerty/: setting.json
workspace/test_upload/: setting.json
workspace/test_workspace/: setting.json
workspace/workspace.html/: setting.json
workspace/ws_test/: setting.json
workspace/wshopp/: setting.json
workspace/ww/: setting.json
workspace/사자보이즈 2406/: setting.json
workspace/안되면접음/: setting.json
workspace/조회가 안 된다/: setting.json
workspace/헌트릭스 정산/: setting.json
(+45 files in other folders)
